SERVER-44281 Fix use of invalid end iterator